[gd_scene load_steps=12 format=3 uid="uid://bttntkifyqc8w"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/ExploderPhysics.gd" id="1_nm13k"]
[ext_resource type="Texture2D" uid="uid://o7gr05l8s3uo" path="res://Assets/Images/Objects/Enemy/Bomb.png" id="2_lnujj"]
[ext_resource type="Texture2D" uid="uid://failsjwtufog" path="res://Assets/Images/Objects/Misc/FireParticle1.png" id="3_4vo2s"]

[sub_resource type="CircleShape2D" id="CircleShape2D_astfj"]
radius = 7.07107

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_gum0p"]
blend_mode = 1

[sub_resource type="Gradient" id="Gradient_gpaxp"]
offsets = PackedFloat32Array(0, 0.147541, 0.221311, 0.409836, 0.754098)
colors = PackedColorArray(1, 0.945098, 0.894118, 1, 1, 1, 0.0313726, 1, 1, 0.52549, 0.152941, 1, 0.803922, 0, 0, 1, 0, 0, 0, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ba72s"]
gradient = SubResource("Gradient_gpaxp")
use_hdr = true

[sub_resource type="Curve" id="Curve_6a71e"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.546667, 1), 0.0, 0.0, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_7082m"]
curve = SubResource("Curve_6a71e")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_paoqu"]
lifetime_randomness = 1.0
particle_flag_disable_z = true
particle_flag_damping_as_friction = true
emission_shape = 1
emission_sphere_radius = 3.0
angle_min = -720.0
angle_max = 720.0
spread = 180.0
initial_velocity_min = 1.0
initial_velocity_max = 500.0
gravity = Vector3(0, 0, 0)
linear_accel_min = -50.0
damping_min = 0.7
damping_max = 0.7
scale_curve = SubResource("CurveTexture_7082m")
color_ramp = SubResource("GradientTexture1D_ba72s")
hue_variation_min = -0.01
hue_variation_max = 0.01
turbulence_noise_strength = 0.0
turbulence_noise_scale = 0.0

[sub_resource type="CircleShape2D" id="CircleShape2D_01v2v"]
radius = 13.0384

[node name="Exploder" type="Node2D"]
script = ExtResource("1_nm13k")

[node name="ExplosionHitbox" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionHitbox"]
shape = SubResource("CircleShape2D_astfj")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_lnujj")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
modulate = Color(0.5, 0.5, 0.5, 0.682)
material = SubResource("CanvasItemMaterial_gum0p")
emitting = false
amount = 5000
process_material = SubResource("ParticleProcessMaterial_paoqu")
texture = ExtResource("3_4vo2s")
one_shot = true
explosiveness = 0.9
randomness = 1.0

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ExplosionArea" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
shape = SubResource("CircleShape2D_01v2v")

[connection signal="body_entered" from="ExplosionHitbox" to="." method="_on_explosion_hitbox_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
